--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Zach's PIC16B Blog
+name: Zach's Blog
 
 # Short bio or description (displayed in the header)
-description: Hi, my name is Zachary Qian, and I am a fourth year student at UCLA studying Applied Mathematics!
+description: Hi, my name is Zachary Qian, and I am a fourth year student at UCLA studying Applied Mathematics and Bioinformatics. I am interested in pursuing higher education in statistics. In particular, I am interested in high dimensional data analysis and Bayesian methods. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
