Edited my description, added stuff in my about section.
edited bio
edited about me talking about research interests

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Zach's Blog
 
 # Short bio or description (displayed in the header)
-description: Hi, my name is Zachary Qian, and I am a fourth year student at UCLA studying Applied Mathematics and Bioinformatics. I am interested in pursuing higher education in statistics. In particular, I am interested in high dimensional data analysis and Bayesian methods. 
+description: Hi, my name is Zachary Qian, and I am a fourth year student at UCLA studying Applied Mathematics and Bioinformatics.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
