--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Zach's Blog
+name: Zachary Qian: UCLA Undergraduate Studying Mathematics and Bioinformatics
 
 # Short bio or description (displayed in the header)
-description: Hi, my name is Zachary Qian, and I am a fourth year student at UCLA studying Applied Mathematics and Bioinformatics.
+description: Zachary Qian's PIC 16B Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
