--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Zachary Qian: UCLA Undergraduate Studying Mathematics and Bioinformatics
+name: Zachary Qian - UCLA Undergraduate Studying Mathematics and Bioinformatics
 
 # Short bio or description (displayed in the header)
 description: Zachary Qian's PIC 16B Blog
